reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__scheduler.rs_line_1644_col_9.log

*** crates/tracewake-core/src/scheduler.rs:1644:9: replace no_human::try_append_and_apply_agent_event -> Result<EventEnvelope, ()> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/scheduler.rs
+++ replace no_human::try_append_and_apply_agent_event -> Result<EventEnvelope, ()> with Ok(Default::default())
@@ -1636,38 +1636,17 @@
     }
 
     fn try_append_and_apply_agent_event(
         log: &mut EventLog,
         agent_state: &mut AgentState,
         event: EventEnvelope,
         scheduler_errors: &mut Vec<NoHumanSchedulerError>,
     ) -> Result<EventEnvelope, ()> {
-        let event_id = event.event_id.clone();
-        let appended = match log.append(event) {
-            Ok(appended) => appended,
-            Err(error) => {
-                scheduler_errors.push(NoHumanSchedulerError::AgentApply {
-                    event_id,
-                    error: ApplyError::BadPayload {
-                        key: "event_log_append",
-                        value: format!("{error:?}"),
-                    },
-                });
-                return Err(());
-            }
-        };
-        if let Err(error) = apply_agent_event(agent_state, &appended) {
-            scheduler_errors.push(NoHumanSchedulerError::AgentApply {
-                event_id: appended.event_id.clone(),
-                error,
-            });
-            return Err(());
-        }
-        Ok(appended)
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 
     fn latest_action_tick_delta_tick(
         events: &[EventEnvelope],
         actor_id: &ActorId,
     ) -> Option<SimTick> {
         events
             .iter()


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1644:12
     |
1644 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     |            ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1644:12
     |
1644 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     |            ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
